--- a/style.css
+++ b/style.css
@@ -15,23 +15,59 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     font-family: Arial, Helvetica, sans-serif;
 }
 
 .tic {
     display: flex;
-    justify-content: space-around;
     flex-direction: column;
-    border-radius: 4rem;
+    align-items: center;
+    justify-content: space-between;
+    text-align: center;  
+    border-radius: 2rem;
     background-color: var(--white);
     padding: 2rem;
-    height: 60%;
-    width: 30%;
+    width: 20%;
     box-shadow: 0 0.2rem 2rem 0.5rem var(--dark-yellow);
-    position: fixed;
-    transform:translateY(23%);
-    max-width: 30%;
-    max-height: 60%;
+    gap: 1rem;
+}
+
+.title {
+    font-size: 2rem;
+    color: var(--blue);
+}
+
+.squares {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 0.5rem;
+    width: 100%;
+    max-width: 300px;
+    justify-content: center;
+    align-items: center;
+    padding: 2rem;
+    margin-top: -2.5rem;
+}
+
+
+.square {
+    height: 90px;
+    width: 90px;
+    background-color: var(--white);
+    border-radius: 0.5rem;
+    cursor: pointer;
+}
+
+.restart {
+    color: var(--white);
+    background-color: var(--blue);
+    font-size: 1.1rem;
+    padding: 0.9rem 1.5rem;
+    border-radius: 0.5rem;
+    border: none;
+    cursor: pointer;
+    width: fit-content;
 }
 
 .footer {
