--- a/style.css
+++ b/style.css
@@ -25,7 +25,6 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    text-align: center;  
     border-radius: 2rem;
     background-color: var(--white);
     padding: 2rem;
@@ -58,6 +57,7 @@ body {
     background-color: var(--white);
     cursor: pointer;
     border: 2px solid var(--dark-gray);
+    font-size: 2rem;
 }
 
 .square:nth-child(1),
